@@ -1,3 +1,7 @@
+2004-09-09   Christian Stimming <stimming@tuhh.de>
+
+	* src/base/logger.h: Enclose __attribute__deprecated into ifdefs
+	to hide it for non-gcc compilers.
 
 2004/09/08: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
